--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 
 #Ignore output files from 'Airbnb Raw Data Aggregation.ipynb'
 SF Airbnb Raw Data - Aggregated/
-Data/02_Intermediate
+Data/02_Intermediate/
