--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,4 @@
 Data/01_Raw/SF Airbnb Raw Data/SF Airbnb Raw Data - Aggregated/
 
 #Ignore Data Files, files too large
-Data/02_Intermediate/
-Data/03_Processed/
+Data/
